tests/http/requests/invalid/005.py
from web_server.errors import InvalidHeaderName

request = InvalidHeaderName
